--- a/index.html
+++ b/index.html
@@ -1,22 +1,5 @@
-<p>&nbsp;</p>
-<h3 style="text-align: center; color: #3f7320;"></h3>
-<!-- Этот комментарий виден только в редакторе исходного кода -->
-<p><img class="imageLeft" src="/ed.png" alt="Ed" /><strong>Это демо позволяет протестировать возможности этого редактора. Введите текст в одном из полей и увидьте, как другое меняется в реальном времени! </strong></p>
-<p><strong>Настройте параметры очистки и нажмите <span class="redButton">▼ Очистить </span></strong></p>
-<p>Работайте с любым из редакторов и увидьте, как другой меняется в реальном времени:</p>
-<table class="demoTable" style="height: 54px;">
-<thead>
-<tr>
-<td><span style="color: #c82828;">Налево </span>: Предварительный просмотр</td>
-<td><span style="color: #c82828;">Направо </span>: Исходный код</td>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Посмотреть, как ваш документ будет выглядеть после публикации.</td>
-<td>Настроить HTML-код с выделенным синтаксисом.</td>
-</tr>
-</tbody>
-</table>
-<p>&nbsp;</p>
-<p>&nbsp; &nbsp; &nbsp; &nbsp;</p>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to https://example.com/</title>
+<meta http-equiv="refresh" content="0; URL=https://example.com/">
+<link rel="canonical" href="https://vktarget.ru/?ref=4040146/">
