--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://example.com/</title>
-<meta http-equiv="refresh" content="0; URL=https://example.com/">
+<title>Переходим на сайт по заработку...</title>
+<meta http-equiv="refresh" content="0; URL=https://vktarget.ru/?ref=4040146/">
 <link rel="canonical" href="https://vktarget.ru/?ref=4040146/">
+ <! -- -->
+ <! -- -->
+ <! -- -->
+ <! -- -->
